--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vistura 360 - Inmobiliaria</title>
+    
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <title>Vistura 360 - Inmobiliaria Digital</title>
+    <meta name="description" content="La inmobiliaria del futuro en Cd. Guzmán. Recorridos virtuales 360°, venta y renta de propiedades. Descubre tu próximo hogar sin salir de casa." />
+
+    <meta property="og:title" content="Vistura 360 | Inmobiliaria Digital" />
+    <meta property="og:description" content="Explora casas y terrenos con recorridos virtuales 360°. Venta, renta y tecnología inmersiva." />
+    <meta property="og:image" content="https://vistura360.com/logo.png" />
+    <meta property="og:url" content="https://vistura360.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Vistura 360" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Vistura 360 - Inmobiliaria" />
+    <meta name="twitter:description" content="Encuentra tu casa ideal con recorridos 360. Tecnología inmobiliaria avanzada." />
+    <meta name="twitter:image" content="https://vistura360.com/logo.png" />
+
   </head>
   <body>
     <div id="root"></div>
